Styling changes for search field (safari)

--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -123,6 +123,12 @@ nav {
         position: relative;
         margin-left: -$search-form-padding;
 
+        .search-bar {
+            border: $border-weight_m solid $brand-primary-color !important;
+            height: 100%;
+            display: block;
+        }
+
         .search-field {
             width: 100%;
             height: 100%;
@@ -131,7 +137,6 @@ nav {
             border-radius: 0 !important;
             background: #fff;
             color: $brand-primary-color;
-            border: $border-weight_m solid $brand-primary-color !important;
             margin: 0;
 
             &:focus {
