--- a/style/style.css
+++ b/style/style.css
@@ -306,6 +306,12 @@ nav .search-form {
   margin-left: -5px;
 }
 
+nav .search-form .search-bar {
+  border: 2px solid #5a00be !important;
+  height: 100%;
+  display: block;
+}
+
 nav .search-form .search-field {
   width: 100%;
   height: 100%;
@@ -314,7 +320,6 @@ nav .search-form .search-field {
   border-radius: 0 !important;
   background: #fff;
   color: #5a00be;
-  border: 2px solid #5a00be !important;
   margin: 0;
   /* clears the 'X' from Internet Explorer */
   /* clears the 'X' from Chrome */
