--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -132,8 +132,10 @@ nav {
         .search-field {
             width: 100%;
             height: 100%;
+            min-height: 100%;
             padding: $search-form-padding;
-            border: 0;
+            border: 0 !important;
+            outline: none !important;
             border-radius: 0 !important;
             background: #fff;
             color: $brand-primary-color;
