--- a/style/style.css
+++ b/style/style.css
@@ -315,8 +315,10 @@ nav .search-form .search-bar {
 nav .search-form .search-field {
   width: 100%;
   height: 100%;
+  min-height: 100%;
   padding: 5px;
-  border: 0;
+  border: 0 !important;
+  outline: none !important;
   border-radius: 0 !important;
   background: #fff;
   color: #5a00be;
