--- a/style/style.css
+++ b/style/style.css
@@ -341,13 +341,13 @@ nav .search-form .search-field:focus {
 
 nav .search-form .search-field::-webkit-input-placeholder, nav .search-form .search-field::-webkit-input-placeholder {
   color: #5a00be;
-  line-height: 0;
+  line-height: 1.125rem;
   vertical-align: middle;
 }
 
 nav .search-form .search-field::placeholder, nav .search-form .search-field::-webkit-input-placeholder {
   color: #5a00be;
-  line-height: 0;
+  line-height: 1.125rem;
   vertical-align: middle;
 }
 
