--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -158,6 +158,7 @@ nav {
                 color: $brand-primary-color;
                 // line-height: $search-bar-height_m;
                 line-height: $font-size-18 + .2rem;
+                opacity: 1;
                 vertical-align: middle;
             }
 
