--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -268,6 +268,11 @@ nav {
             font-size: $font-size-25;
         }
 
+        .search-form .search-field::placeholder,
+        .search-form .search-field::-webkit-input-placeholder {
+            line-height: $font-size-25 + .3rem;
+        }
+
         ul.sub-menu li a {
             font-size: $font-size-18;
         }
@@ -332,6 +337,11 @@ nav {
         .search-form .search-field::placeholder,
         .search-form .search-field::-webkit-input-placeholder {
             font-size: $font-size-35;
+        }
+
+        .search-form .search-field::placeholder,
+        .search-form .search-field::-webkit-input-placeholder {
+            line-height: $font-size-35 + .4rem;
         }
 
         ul.sub-menu li a {
