Footer Styling adjusted

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -18,6 +18,10 @@ footer {
     // Sticky Footer
     margin-top: -$footer-height;
 
+    .menu-footer-de-en-container {
+        width: 100%;
+    }
+
     ul {
         margin: 10px 0;
         padding: 0;
@@ -25,7 +29,17 @@ footer {
         li {
             list-style-type: none;
             display: inline-block;
-            margin-right: 20px;
+            margin-bottom: 6px;
+            width: 100%;
+            text-align: center;
         }
+    }
+}
+
+@media (min-width: $breakpoint-tablet) {
+    footer ul li {
+        width: auto;
+        margin: 0 20px 0 0;
+        text-align: left;
     }
 }
