--- a/style/style.css
+++ b/style/style.css
@@ -1574,7 +1574,8 @@ h6 {
 .wrapper main .content > h5,
 .wrapper main .content > h6,
 .wrapper main .content > ul,
-.wrapper main .content > ol {
+.wrapper main .content > ol,
+.wrapper main .content form {
   max-width: 540px;
   margin: 1rem auto;
 }
@@ -1735,7 +1736,8 @@ h6 {
   .wrapper main .content > h5,
   .wrapper main .content > h6,
   .wrapper main .content > ul,
-  .wrapper main .content > ol {
+  .wrapper main .content > ol,
+  .wrapper main .content form {
     max-width: 80%;
   }
   .wrapper main .content figure.wp-block-gallery li.blocks-gallery-item figure img {
