--- a/style/_forms.scss
+++ b/style/_forms.scss
@@ -157,7 +157,7 @@ select {
 	background-color: $contrast-primary-color;
 	border: $border-weight_m solid $brand-primary-color;
 	/* arrow icon */
-	background-image: url('../assets/arrow_purple.svg');
+	background-image: url('../assets/hfkasta_stack.svg#arrow_purple');
 	background-repeat: no-repeat;
 	/* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
 	background-position: right .7em top 50%, 0 0;
