--- a/style/style.css
+++ b/style/style.css
@@ -2114,7 +2114,7 @@ select {
   background-color: #fff;
   border: 2px solid #5a00be;
   /* arrow icon */
-  background-image: url("../assets/arrow_purple.svg");
+  background-image: url("../assets/hfkasta_stack.svg#arrow_purple");
   background-repeat: no-repeat;
   /* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
   background-position: right .7em top 50%, 0 0;
