--- a/style/_forms.scss
+++ b/style/_forms.scss
@@ -207,3 +207,13 @@ select {
 		border-color: #aaa;
 	}
 }
+
+// Error Messages
+.wpcf7 form.invalid .wpcf7-response-output,
+.wpcf7 form.unaccepted .wpcf7-response-output {
+	margin: 0;
+	border: $border-weight_m solid $brand-primary-color;
+	font-family: 'GT-Haptik-Regular', sans-serif;
+	color: $brand-secondary-color;
+	padding: 20px;
+}
