Form Error Messages styled addition

--- a/style/style.css
+++ b/style/style.css
@@ -2166,8 +2166,9 @@ select:disabled:hover, select[aria-disabled=true] {
 .wpcf7 form.invalid .wpcf7-response-output,
 .wpcf7 form.unaccepted .wpcf7-response-output {
   margin: 0;
-  border: 2px solid #5a00be;
-  font-family: 'GT-Haptik-Regular', sans-serif;
+  border: 2px solid #d50e31;
+  border-color: #d50e31;
+  font-family: 'GT-Haptik-Regular-Oblique', sans-serif;
   color: #d50e31;
   padding: 20px;
 }
