--- a/style/_forms.scss
+++ b/style/_forms.scss
@@ -212,8 +212,9 @@ select {
 .wpcf7 form.invalid .wpcf7-response-output,
 .wpcf7 form.unaccepted .wpcf7-response-output {
 	margin: 0;
-	border: $border-weight_m solid $brand-primary-color;
-	font-family: 'GT-Haptik-Regular', sans-serif;
+	border: $border-weight_m solid $brand-secondary-color;
+	border-color: $brand-secondary-color;
+	font-family: 'GT-Haptik-Regular-Oblique', sans-serif;
 	color: $brand-secondary-color;
 	padding: 20px;
 }
